// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Test List renders page correctly with defaults 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Perform seedlist tests that help you predict how your emails are handled by mailbox providers.
      </p>,
      "image": [Function],
      "show": true,
      "title": "Find and Fix Inbox Placement Issues",
    }
  }
  primaryAction={
    Object {
      "component": [Function],
      "content": "Start a Test",
      "to": "/inbox-placement/seedlist",
    }
  }
  title="Inbox Placement"
>
  <p
    className="Description"
  >
    An Inbox Placement Test can tell you if you are actually landing in the recipients inbox. We can provide insight into what mailbox providers are doing with your email.
  </p>
  <Panel
    title="Inbox Placement Trends"
  >
    <Panel.Section>
      <TrendsFilters
        filters={
          Object {
            "dateRange": Object {
              "from": "2019-07-11T16:30:00.000Z",
              "to": "2019-08-10T16:30:00.000Z",
            },
            "range": "30days",
            "tags": Object {},
          }
        }
        updateFilters={[Function]}
        validateDate={[Function]}
      />
    </Panel.Section>
    <Connect(TrendsChart)
      filters={
        Object {
          "dateRange": Object {
            "from": "2019-07-11T16:30:00.000Z",
            "to": "2019-08-10T16:30:00.000Z",
          },
          "range": "30days",
          "tags": Object {},
        }
      }
    />
    <FilterSortCollection
      defaultSortColumn="start_time"
      filterBoxConfig={
        Object {
          "itemToStringKeys": Array [
            "subject",
            "test_name",
            "from_address",
          ],
          "placeholder": "Search By: Subject, Placement Name, From Address",
          "show": true,
          "wrapper": [Function],
        }
      }
      rowComponent={[Function]}
      rows={Array []}
      selectOptions={
        Array [
          Object {
            "disabled": true,
            "label": "Sort By",
            "value": "Sort By",
          },
          Object {
            "label": "Start Time",
            "value": "start_time",
          },
          Object {
            "label": "Inbox",
            "value": "placement.inbox_pct",
          },
          Object {
            "label": "Spam",
            "value": "placement.spam_pct",
          },
          Object {
            "label": "Missing",
            "value": "placement.missing_pct",
          },
        ]
      }
      title="Tests"
    />
  </Panel>
</Page>
`;

exports[`Page: Test List renders page with tests 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Perform seedlist tests that help you predict how your emails are handled by mailbox providers.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Find and Fix Inbox Placement Issues",
    }
  }
  primaryAction={
    Object {
      "component": [Function],
      "content": "Start a Test",
      "to": "/inbox-placement/seedlist",
    }
  }
  title="Inbox Placement"
>
  <p
    className="Description"
  >
    An Inbox Placement Test can tell you if you are actually landing in the recipients inbox. We can provide insight into what mailbox providers are doing with your email.
  </p>
  <Panel
    title="Inbox Placement Trends"
  >
    <Panel.Section>
      <TrendsFilters
        filters={
          Object {
            "dateRange": Object {
              "from": "2019-07-11T16:30:00.000Z",
              "to": "2019-08-10T16:30:00.000Z",
            },
            "range": "30days",
            "tags": Object {},
          }
        }
        updateFilters={[Function]}
        validateDate={[Function]}
      />
    </Panel.Section>
    <Connect(TrendsChart)
      filters={
        Object {
          "dateRange": Object {
            "from": "2019-07-11T16:30:00.000Z",
            "to": "2019-08-10T16:30:00.000Z",
          },
          "range": "30days",
          "tags": Object {},
        }
      }
    />
    <FilterSortCollection
      defaultSortColumn="start_time"
      filterBoxConfig={
        Object {
          "itemToStringKeys": Array [
            "subject",
            "test_name",
            "from_address",
          ],
          "placeholder": "Search By: Subject, Placement Name, From Address",
          "show": true,
          "wrapper": [Function],
        }
      }
      rowComponent={[Function]}
      rows={
        Array [
          Object {
            "authentication": Object {
              "dkim_pct": null,
              "dmarc_pct": null,
              "spf_pct": null,
            },
            "end_time": "2019-06-01T12:35:06-04:00",
            "from_address": "aubrey.altmann@sparkpost.com",
            "id": 1,
            "placement": Object {
              "inbox_pct": 0.397,
              "missing_pct": 0.588,
              "spam_pct": 0.015,
            },
            "seedlist_count": 11,
            "start_time": "2019-08-01T12:30:06-04:00",
            "status": "running",
            "subject": "Your Subject Line Goes Here and Can be long 1",
            "test_name": "test_name_test1",
          },
          Object {
            "authentication": Object {
              "dkim_pct": null,
              "dmarc_pct": null,
              "spf_pct": null,
            },
            "end_time": "2019-06-01T12:35:06-04:00",
            "from_address": "aubrey.altmann@sparkpost.com",
            "id": 2,
            "placement": Object {
              "inbox_pct": 0.897,
              "missing_pct": 0.088,
              "spam_pct": 0.015,
            },
            "seedlist_count": 12,
            "start_time": "2019-06-01T12:30:06-04:00",
            "status": "completed",
            "subject": "Subject Line Goes Here and Can be long 2",
            "test_name": "test_name_test2",
          },
          Object {
            "authentication": Object {
              "dkim_pct": null,
              "dmarc_pct": null,
              "spf_pct": null,
            },
            "end_time": "2019-06-01T12:35:06-04:00",
            "from_address": "aubrey.altmann@sparkpost.com",
            "id": 3,
            "placement": Object {
              "inbox_pct": 0.897,
              "missing_pct": 0.088,
              "spam_pct": 0.015,
            },
            "seedlist_count": 13,
            "start_time": "2019-06-01T12:30:06-04:00",
            "status": "stopped",
            "subject": "Subject Line Goes Here and Can be long 3",
            "test_name": "test_name_test3",
          },
        ]
      }
      selectOptions={
        Array [
          Object {
            "disabled": true,
            "label": "Sort By",
            "value": "Sort By",
          },
          Object {
            "label": "Start Time",
            "value": "start_time",
          },
          Object {
            "label": "Inbox",
            "value": "placement.inbox_pct",
          },
          Object {
            "label": "Spam",
            "value": "placement.spam_pct",
          },
          Object {
            "label": "Missing",
            "value": "placement.missing_pct",
          },
        ]
      }
      title="Tests"
    />
  </Panel>
</Page>
`;
